--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "sass": "^1.69.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
